# oracle3

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  demo.sh  demo_server.py  index.html  mkdocs.yml  preview_dashboard.py  pyproject.toml  run_dflow_backtest.py  run_full_simulation.py  sitemap.xml  track_session.py
.agent/skills/pm-quant-strategy-authoring/: SKILL.md
.claude/skills/pm-data-discovery/: SKILL.md
.github/workflows/: codespell.yml  mypy.yml  pytest.yml  ruff.yml
CLI_MONITORING/: index.html
CLI_QUICK_START/: index.html
PROJECT_SPECIFICATION/: index.html
coinjure/matching/: __init__.py  _cache.py  _category.py  _date.py  _fetchers.py  _pipeline.py  _resolution.py  _template.py  _text.py  _types.py
data/: backtest_solana_results.json
data/cross_platform/: backtest_results.json  match_summary.json
data/episodes/dflow_10min/: dflow_events.parquet  metadata.json
data/episodes/dflow_15min/: dflow_events.parquet  metadata.json
data/episodes/dflow_2hr/: dflow_events.parquet  metadata.json
data/episodes/dflow_5min/: dflow_events.parquet  metadata.json
data/episodes/dflow_live_session/: dflow_events.parquet  metadata.json
docs/: CLI_MONITORING.md  CLI_QUICK_START.md  PROJECT_SPECIFICATION.md  index.md
examples/: backtest_example.py  cross_platform_arb_example.py  custom_strategy_example.py  demo_monitor.py  live_paper_trading_example.py  monitor_example.py  performance_analysis_example.py
examples/strategies/: cross_platform_arb_strategy.py  openai_related_market_agent_strategy.py  orderbook_pressure_strategy.py  related_market_agent_strategy.py  threshold_momentum_strategy.py
oracle3/: __init__.py
oracle3/agent/: __init__.py  coordinator.py
oracle3/alerts/: __init__.py  alerter.py  telegram_alerter.py
oracle3/analytics/: performance_analyzer.py
oracle3/backtest/: backtester.py
oracle3/blinks/: __init__.py  generator.py  server.py
oracle3/cli/: __init__.py  agent_commands.py  cli.py  control.py  data_commands.py  market_commands.py  monitor.py  news_commands.py  research_commands.py  textual_monitor.py  trade_commands.py  utils.py
oracle3/config/: __init__.py
oracle3/core/: trading_engine.py
oracle3/dashboard/: __init__.py  server.py
oracle3/dashboard/static/: demo.html  index.html  live.html
oracle3/data/: composite_data_source.py  data_source.py  market_data_manager.py
oracle3/data/backtest/: dflow_recorder.py  historical_data_source.py  kalshi_replay_data_source.py
oracle3/data/live/: coingecko_x402_data_source.py  dflow_data_source.py  dflow_ws_data_source.py  google_news_data_source.py  kalshi_data_source.py  onchain_signal_source.py  polymarket_orderflow.py  twitter_fetcher.py
oracle3/data/preprocessing/: news_processor.py
oracle3/engine/: __init__.py  control.py  registry.py
oracle3/events/: events.py
oracle3/live/: live_trader.py
oracle3/market/: __init__.py  relations.py  validation.py
oracle3/mock/: mock_mode.py
oracle3/onchain/: __init__.py  logger.py  reputation.py
oracle3/position/: position_manager.py
oracle3/risk/: onchain_risk_manager.py  risk_manager.py
oracle3/storage/: __init__.py  serializers.py  state_store.py
oracle3/strategy/: agent_strategy.py  loader.py  market_making_strategy.py  momentum_mean_reversion_strategy.py  orderbook_imbalance_strategy.py  quant_strategy.py  simple_strategy.py  strategy.py  test_strategy.py
oracle3/strategy/contrib/: __init__.py  adaptive_onchain_strategy.py  coint_spread_strategy.py  conditional_arb_strategy.py  cross_market_arbitrage_strategy.py  debate_strategy.py  event_sum_arb_strategy.py  exclusivity_arb_strategy.py  implication_arb_strategy.py  lead_lag_strategy.py  llm_news_strategy.py  multi_agent_strategy.py  solana_agent_strategy.py  structural_arb_strategy.py
oracle3/ticker/: ticker.py
oracle3/trader/: atomic_trader.py  flash_loan.py  jito_submitter.py  kalshi_trader.py  paper_trader.py  polymarket_trader.py  solana_trader.py  spread_executor.py  trader.py  types.py
scripts/: backtest_adaptive_kalshi.py  crawl_cross_platform_data.py  get_live_news_data.py  get_live_polymarket_data.py  run_cross_platform_arb_backtest.py  run_kalshi_paper_test.py  run_llm_backtest.py  run_llm_news_simulation.py  run_multi_backtest.py  run_paper_trading.py
search/: search_index.json
skills/pm-agent-strategy-authoring/: SKILL.md
skills/pm-quant-strategy-authoring/: SKILL.md
tests/: test_agent_cli.py  test_agent_strategy_sdk.py  test_alerter.py  test_atomic_trader.py  test_coinjure_matching.py  test_config.py  test_constraint_arb_strategies.py  test_cross_market_arbitrage_strategy.py  test_dflow_data_source.py  test_engine_p0.py  test_events.py  test_flash_loan.py  test_google_news_data_source.py  test_historical_data_source.py  test_init.py  test_jito_submitter.py  test_live_trader_wiring.py  test_market_data_manager.py  test_market_relations.py  test_multi_agent_coordination.py  test_onchain_logger.py  test_onchain_risk_manager.py  test_onchain_signal_source.py  test_order_book.py  test_order_result_contract.py  test_p0_guards.py  test_paper_trader.py  test_performance_analyzer.py  test_position_manager.py  test_quant_strategies.py  test_reputation.py  test_research_cli.py  test_risk_manager.py  test_solana_ticker.py  test_solana_trader.py  test_spread_executor.py  test_state_store.py  test_statistical_arb_strategies.py  test_strategy_registry.py  test_ticker.py  (+2 more)
